01.web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: vms
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: my-first-bootc
  type: ClusterIP
