02.bdg-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bdg
  namespace: vms
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: my-first-bootc
  type: ClusterIP
