04.bdg-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: bdg
  namespace: vms
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: bdg
    weight: 100
